--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "assets/stylesheets/netropolix-theme";
+
+@import "assets/stylesheets/variables";
+@import "assets/stylesheets/general";
+@import "assets/stylesheets/navbar";
+
+@import "assets/stylesheets/account";
+@import "assets/stylesheets/dashboard";
+@import "assets/stylesheets/camera-settings";
