--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,4 @@
 @import "assets/stylesheets/account";
 @import "assets/stylesheets/dashboard";
 @import "assets/stylesheets/camera-settings";
+@import "assets/stylesheets/search";
